# geodata-rest

./: .gitignore  Cargo.toml  README-demo.md  README-dev.md  README.md  test.json
assets/: geodata_anchor.wasm
config/: default.json  test.json
schemas/: geodata.json  validation.json
scripts/: create-geodata-index.js  sample-geodata-query.js
src/: context.rs  errors.rs  lib.rs  logger.rs  main.rs  settings.rs
src/common/: anchor.rs  authenticate_request.rs  hasher.rs  mod.rs  msg.rs  token.rs
src/lib/: authenticate_request.rs  hasher.rs  mod.rs
src/models/: account.rs  geodata.rs  mod.rs  role.rs  validation.rs
src/routes/: account.rs  geodata.rs  mod.rs  validation.rs
tests/: account_tests.rs  common.rs  integration.rs  integration_test.rs  main.rs  model_tests.rs  role_tests.rs
