[package]
name = "geodata-rest"
version = "0.1.0"
authors = ["tsondru <k.tsondru.tarchin@pm.me>"]
edition = "2021"

[dependencies]
config = "0.13"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_derive = "1.0.136"
# Wait for wither to relase a new version.
# https://github.com/thedodd/wither/pull/89#issuecomment-1023644443
wither = { git = "https://github.com/thedodd/wither" }
futures = "0.3.21"
thiserror = "1.0.30"
axum = { version = "0.5", features = ["headers"] }
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.2.5", features = ["trace", "compression-br", "propagate-header", "sensitive-headers"] }
http = "0.2.6"
chrono = "0.4.19"
async-trait = "0.1"
# Investigate if wither::bson can be used instead and activate this feature.
bson = { version = "2.1.0", features = ["serde_with", "chrono-0_4"] }
jsonwebtoken = "8"
once_cell = "1.10"
bcrypt = "0.12"
validator = { version = "0.14.0", features = ["derive"] }
sha3 = "0.10"
base16ct = "0.1"
cosmrs = { version = "0.5", features = ["cosmwasm"] }
cosmwasm-std = { version = "1.0.0-beta7" }
schemars = "0.8"
anyhow="1.0"  

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
hyper = { version = "0.14", features = ["full"] }
mime = "0.3"
