[package]
name = "geodata-rest"
version = "0.1.0"
authors = ["tsondru <k.tsondru.tarchin@pm.me>"]
edition = "2021"

[dependencies]
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
# Wait for wither to relase a new version.
# https://github.com/thedodd/wither/pull/89#issuecomment-1023644443
wither = { git = "https://github.com/tsondru/wither" }
futures = "0.3.21"
thiserror = "1.0.30"
axum = { version = "0.5", features = ["headers"] }
axum-macros = "0.2"
tokio = { version = "1.18", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.3.0", features = ["trace", "compression-br", "propagate-header", "sensitive-headers"] }
chrono = "0.4.19"
async-trait = "0.1"
# Investigate if wither::bson can be used instead and activate this feature.
bson = { version = "2.2.0", features = ["serde_with", "chrono-0_4"] }
jsonwebtoken = "8"
once_cell = "1.10"
bcrypt = "0.13"
validator = { version = "0.15", features = ["derive"] }
sha3 = "0.10"
base16ct = "0.1"
cosmrs = { version = "0.7", features = ["cosmwasm", "rpc", "bip32"] }
cosmwasm-std = { version = "1" }
schemars = "0.8"
anyhow="1.0"  
lazy_static = "1.4.0"
tiny-bip39 = "0.8.2"
bip32 = "0.3"
tendermint-rpc = { version = "=0.23", features = ["http-client"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
hyper = { version = "0.14", features = ["full"] }
mime = "0.3"
